tests/NormalTests/paczka1/fuzzy1/58450755.err
Error in line 2: G3OBMJ2hI S149 68,1
Error in line 6: 9UB S745 4,8
Error in line 8: 2LRX A216 29,5
Error in line 13: ILAlV S149 88,0
Error in line 18: ILAlV S745 57,4
Error in line 23: 9UB S149 83,1
Error in line 21: ILAlV S149 65,2
Error in line 5: G3OBMJ2hI A216 5,4
Error in line 22: 2LRX A44 91,9
